# objeck-lang

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .travis.yml  ARM64_VALIDATION.md  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  Changelog  HANDOFF.md  LICENSE  Makefile.am  Makefile.in  PERF_DEBUG_CONTEXT.md  README  README.md  SECURITY.md  SIGNING.md  autogen.sh  configure  configure.ac  run_codedoc.bat
.claude/: BUILD_SUCCESS_REPORT.md  COMPLETE_FINAL_SUMMARY.md  COMPLETE_SUMMARY.md  DEFINITIVE_NEXT_ACTION.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_OPTIMIZATION_SUMMARY.md  FINAL_PROJECT_STATUS.md  JIT_OPTIMIZATION_PLAN.md  MANUAL_PUSH_INSTRUCTIONS.md  NEXT_STEPS.md  PR_DESCRIPTION.md  PR_READY.md  PUSH_ALTERNATIVES.md  README_JIT_OPTIMIZATIONS.md  README_START_HERE.md  TESTING_JIT_OPTIMIZATIONS.md  TRANSFER_READY.md  WORK_COMPLETED_SUMMARY.md  settings.local.json
.claude/skills/: benchmark.md
.github/: release-drafter.yml
.github/workflows/: benchmark.yml  c-cpp.yml  ci-build.yml  codeql-analysis.yml  codeql.yml  jekyll-gh-pages.yml  perf-gate.yml  release-build.yml  release-drafter.yml  release-publish.yml  secret-scan.yml  synopsys-io-analysis.yml
core/: cleanup_macos_intel.sh  readme.md
core/compiler/: Makefile  README.md  TODO  a.obe  compiler.cpp  compiler.h  compiler.sln  context.cpp  context.h  emit.cpp  emit.h  intermediate.cpp  intermediate.h  linker.cpp  linker.h  obc  objeck.res  optimization.cpp  optimization.h  parser.cpp  parser.h  posix_main.cpp  regress.sh  scanner.cpp  scanner.h  target.cpp  target.h  tree.cpp  tree.h  types.cpp  types.h  update_version.cmd  update_version.sh  update_version_arm.sh
core/debugger/: README.md  color.h  dap.cpp  dap.h  debugger.cpp  debugger.h  debugger.sln  parser.cpp  parser.h  scanner.cpp  scanner.h  tree.cpp  tree.h
core/formatter/: formatter.cpp  formatter.h  formatter.sln  test.cpp
core/installer/: installer.sln
core/lib/: README.md  ai.obl  cipher.obl  collect.obl  concurrent.obl  configobjk.ini  csv.obl  diags.obl  encrypt.obl  fcgi.obl  fcgi_web.obl  finder.obl  gemini.obl  gen_collect.obl  gtk3.obl  json.obl  json_rpc.obl  json_stream.obl  lame.obl  lang.obl  math.obl  misc.obl  ml.obl  net.obl  (+18 more)
debian/: Makefile  Makefile.32  Makefile.64  Makefile~  build.in  build.sh  build.sh~  rules
docker/: Dockerfile  Dockerfile.buildenv  Dockerfile.ci-repro  build.cmd  ci_repro.sh
docs/: AI.md  ARM64_STEP2.md  CI_CD.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CI_CD_QUICK_REFERENCE.md  CI_CD_QUICK_START.md  CI_CD_SETUP.md  CODE_SIGNING_SETUP.md  Compiler Design.pptx  EXAMPLES.md  FEATURES.md  GITHUB_ACTIONS_SETUP.md  MODELS.md  README.md  architecture.md  arm64-float-jit-investigation.md  assume_nonnull_feature.md  benchmarks.xlsx  build_msys2.txt  cli_options.md  deploy.txt  design.vsd  dot-emacs  editors.md  eula.rtf  fcgi_readme.docx  fcgi_readme.htm  fcgi_readme.html  getting_started.url  git_cheats.txt  gud.el  jit-malloc-corruption-investigation.md  jit.vsdx  macos_http2_http3.md  model.txt  objeck.graffle  objeck_lang.tex  optimization_pipeline.md  performance.md  readme.docx  (+10 more)
images/: README.md
misc/: README.md
perf-results/: BENCHMARK_TASK.md  PERF_GATE.md  check_perf_gate.py  gen_charts.py  perf_baseline.json  report.html  run_benchmarks.sh
programs/: README.md  TESTING.md
releases/: objeck-lang_3.3.5-2-1_amd64.deb  objeck-lang_3.3.5-2-1_i386.deb  objeck-lang_3.3.5-2_amd64.tgz  objeck-lang_3.3.5-2_linux_i386.tgz  objeck-lang_3.3.5-2_osx.tgz  objeck_r0.9.11_win.msi  objeck_r1.1.3_0_win.msi  objeck_r1.1.3_1_win.msi  objeck_r1.1.4_0_win.msi  objeck_r1.2.0_0_win.msi  objeck_r1.2.1_0_win.msi  objeck_r1.2.1_1_win.msi  objeck_r1.2.1_2_linux32.tgz  objeck_r1.2.1_2_linux64.tgz  objeck_r1.2.1_2_src.tgz  objeck_r1.2.1_2_win.msi  objeck_r1.3.0_0_linux32.tgz  objeck_r1.3.0_0_linux64.tgz  objeck_r1.3.0_0_src.tgz  objeck_r1.3.0_0_win.msi  objeck_r1.3.0_1_amd64.tgz  objeck_r1.3.0_1_ia32.tgz  objeck_r1.3.0_1_src.tgz  objeck_r1.3.0_1_win.msi  objeck_r1.4.0_0_linux32.tgz  objeck_r1.4.0_0_linux64.tgz  objeck_r1.4.0_0_src.tgz  objeck_r1.4.0_0_win.msi  objeck_r1.4.1_0_linux32.tgz  objeck_r1.4.1_0_linux64.tgz  objeck_r1.4.1_0_src.tgz  objeck_r1.4.1_0_win.msi  objeck_r1.4.1_1_win.msi  objeck_r1.4.2_0_linux32.tgz  objeck_r1.4.2_0_src.tgz  objeck_r1.4.2_0_win.msi  objeck_r1.4.2_1_linux32.tgz  objeck_r1.4.2_1_linux64.tgz  objeck_r1.4.2_1_osx.dmg.bz2  objeck_r1.4.2_1_win.msi  (+235 more)
scripts/: setup_vscode.cmd
src/: fixes.txt
wip/: inf.cpp
(+6812 files in other folders)
